<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="12dp"
    tools:context=".RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/nameSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <EditText
                android:id="@+id/nameSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/secondaryColor"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/emailSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/emailSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/secondaryColor"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/phoneSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/phoneSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/secondaryColor"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                app:layout_constraintBottom_toTopOf="@+id/passwordSignup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/passwordSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryColor"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="@+id/signupBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/verifyPswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/secondaryColor"
                android:ems="10"
                android:hint="@string/verifyPassword"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verifyPswd">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondaryColor"
                    android:entries="@array/Cities" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondaryColor"
                    android:ems="10"
                    android:hint="@string/birth"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/signupBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggleSports"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ToggleButton"
                        android:textOff="@string/sports"
                        android:textOn="@string/sports" />

                    <ToggleButton
                        android:id="@+id/toggleConcerts"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ToggleButton"
                        android:textOff="@string/concerts"
                        android:textOn="@string/concerts" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggleTableGames"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ToggleButton"
                        android:textOff="@string/tableGames"
                        android:textOn="@string/tableGames" />

                    <ToggleButton
                        android:id="@+id/toggleParty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ToggleButton"
                        android:textOff="@string/Party"
                        android:textOn="@string/Party" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ToggleButton
                        android:id="@+id/toggleChat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ToggleButton"
                        android:textOff="@string/Chat"
                        android:textOn="@string/Chat" />

                    <ToggleButton
                        android:id="@+id/toggleConference"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="ToggleButton"
                        android:textOff="@string/Conference"
                        android:textOn="@string/Conference" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/signup"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>