<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="14dp"
    tools:context=".LoginActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            style="@style/form_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="8"
            android:hint="CORREO/USUARIO"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/password"
            tools:layout_editor_absoluteX="10dp" />

        <EditText
            android:id="@+id/password"
            style="@style/form_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:hint="CONTRASEÑA"
            app:layout_constraintBottom_toTopOf="@+id/rememberMe"
            tools:layout_editor_absoluteX="10dp" />

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/remember"
            style="@style/typ_medium_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp" />

        <TextView
            android:id="@+id/title"
            style="@style/typ_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/rememberMe"
            tools:layout_editor_absoluteX="10dp">

            <Button
                android:id="@+id/signinBtn"
                style="@style/form_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inciate" />

            <Button
                android:id="@+id/forgotBtn"
                style="@style/form_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/forgotPswd" />
        </LinearLayout>

        <Button
            android:id="@+id/backBtnLogin"
            style="@style/form_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            tools:layout_editor_absoluteX="10dp">

            <View
                android:id="@+id/view2"
                style="@style/form_lineBlack"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/typ_medium_bold"
                android:textAlignment="center"
                android:text="O ingresa con" />

            <View
                android:id="@+id/view3"
                android:layout_gravity="center"
                style="@style/form_lineBlack"
                android:layout_weight="1" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>